<resources>
    <string name="app_name">NempatIn</string>
    <string name="home">home</string>
    <string name="add">add</string>
    <string name="saved">saved</string>
    <string name="search">search</string>
    <string name="profile">profile</string>

    <string name="your_web_client_id">9579574041-e0lani2th93qi6b2orpncu0qquptkr1d.apps.googleusercontent.com</string>
    <string name="back_button">back</string>
    <string name="land_area">area land</string>
    <string name="building_area">building area</string>
    <string name="certificate">certificate</string>
    <string name="bedroom">bedroom</string>
    <string name="bathroom">bathroom</string>
    <string name="garage">garage</string>
    <string name="luas_tanah_title">land area</string>
    <string name="luas_bangunan_title">building area</string>
    <string name="price_title">price</string>
    <string name="contact_title">contactdetail</string>
    <string name="property_city">city</string>
    <string name="property_name">property name</string>

</resources>